<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.education.drawerdemo.ui.home.ParentFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_share_app"
        android:name="com.education.drawerdemo.ui.vision.VisionFragment"
        android:label="@string/ourvision"
        tools:layout="@layout/fragment_vision" />

    <fragment
        android:id="@+id/nav_progress"
        android:name="com.education.drawerdemo.ui.terms_conditions.TermFragment"
        android:label="@string/terms_conditions"
        tools:layout="@layout/fragment_term_conditions" />
    <fragment
        android:id="@+id/nav_notification"
        android:name="com.education.drawerdemo.ui.announcement.AnnouncementFragment"
        android:label="@string/anouncement"
        tools:layout="@layout/fragment_term_conditions" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.education.drawerdemo.ui.announcement.AnnouncementFragment"
        android:label="@string/anouncement"
        tools:layout="@layout/fragment_term_conditions" />

</navigation>