<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/tv_infoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_give_your_information"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:layout_margin="50dp"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvStudentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/etStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            android:layout_margin="10dp"
          />

        <EditText
            android:id="@+id/etAge"
            app:layout_constraintWidth_min="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent" />

        <TextView
            app:layout_constraintTop_toBottomOf="@+id/etAge"
            android:id="@+id/tv_classTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_title"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            android:layout_margin="10dp"
           />

        <EditText
            android:id="@+id/etClassName"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ivNext"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/next_icon_circle" />

        <TextView
            android:id="@+id/tvCreate_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>