<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_color">


    <ImageView
        android:id="@+id/iv_learnon"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/learn_on_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_learnon"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/your_desire"
        android:textColor="#FFF"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_margin="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/password"
            android:textColor="#fff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:gravity="center"
            android:backgroundTint="@color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_re_enterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/re_enter_password"
            android:textColor="#fff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etRepassword"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:backgroundTint="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


    <ImageButton
        android:id="@+id/ivNext"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/tvCreate_account"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/next_icon_circle"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/tvCreate_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:text="@string/create_account"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>