<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_color"
    tools:context=".MainActivity">


    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/iv_learnon"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/learn_on_icon"
         />

    <TextView
        android:layout_below="@+id/iv_learnon"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_desire"
        android:textColor="#FFF"
        android:textStyle="bold"
       />

    <ImageButton
        android:layout_above="@+id/tvContinueMobile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:id="@+id/ivNext"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/next_icon_circle"
        />

    <TextView
        android:layout_above="@+id/tvCreate_account"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvContinueMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/continue_with"
        android:textColor="#FFF"
        android:textSize="20sp"
      />

    <TextView
        android:layout_above="@+id/bar"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvCreate_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold"
       />
    <TextView
        android:layout_marginTop="3dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/bar"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginBottom="50dp"
        />
</RelativeLayout>